# MEFSC

./: CMakeLists.txt  LICENSE  MEFSC_DB.db  MEF_S  README.md
.github/workflows/: cmake-single-platform.yml
include/: auth.h  read_write_handlers.h  server_logger.h  tui_menu.h
include/common/: SessionEnc.h  constants.h  encryption_utils.h
src/client/: authed_entry.cpp  client.cpp  tui_menu.cpp
src/encryption_utils/: SessionEnc.cpp  encryption_utils.cpp
src/server/: auth.cpp  read_write_handlers.cpp  server.cpp  server_logger.cpp
tests/: CMakeLists.txt  gen_hash.cpp  integ_all.cpp  test_encryption_utils.cpp  test_fs_operator.cpp  test_session_enc.cpp
